--- a/Data_processing.ipynb
+++ b/Data_processing.ipynb
@@ -1035,6 +1035,21 @@
         "\n",
         "- Los clientes bronce pueden ser incentivados con promociones para aumentar su frecuencia de compra y gasto total.\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Dashboard"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "###\n",
+        "https://kelvinsuarez.github.io/rfm-analysis-visualization-react/"
+      ]
     }
   ],
   "metadata": {
